data/derived/fa15/progs/unify/prog1684.ml.out
Characters 73-85:
  |Sine(e)->sin(pi*.buildSine(e))
                    ^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         float
